<resources>
    <string name="app_name">CINEMASOFONA</string>
    <string name="registry_observations_label">Observations (optional)</string>
    <string name="registry_observations_hint"><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</i></string>
    <string name="registry_photos_add">Add photos</string>
    <string name="registry_pick_date">Choose a date</string>
    <string name="registry_photos_label">Photos (optional)</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="seen_date_label">Date</string>
    <string name="registry_rate_label">Rating (0–10)</string>
    <string name="registry_cinema_label">Cinema</string>
    <string name="registry_cinema_hint"><i>Cinema do Parque</i></string>
    <string name="registry_movie_name_label">Movie name</string>
    <string name="registry_movie_name_hint"><i>The Godfather</i></string>
    <string name="registry_movie_year_label">Movie year</string>
    <string name="registry_movie_year_hint"><i>1972</i></string>
    <string name="dashboard">hello</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="movie_register_title">Movie Register</string>
    <string name="movie_presentation_title">Movies</string>
    <string name="registry_save_button">Save my record</string>
    <string name="registry_dialog_message">Do you want to rate the movie %1$s with the score %2$s?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="registry_success">Record saved successfully</string>
    <string name="registry_error">Fill in all fields correctly</string>

    <string name="error_field_required">Required Field</string>
    <string name="error_date_in_future">The date must be in the past</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="error_invalid_rate">"Select a rating from 1 to 10"</string>
    <string name="error_invalid_movie">This movie does not exist</string>

    <string name="top_5_imdb">Top 5 IMDB</string>
    <string name="best_rated_movies">Best rated</string>
    <string name="last_seen_movies">Last seen</string>

    <string name="cinemas">Cinemas</string>
    <string name="movie_imdb_link_label">View on IMDB</string>
    <string name="share_button_label">Share with your friends</string>
    <string name="movie_imdb_rating">IMDB: %s</string>
    <string name="data_de_lancamento">2023/01/31</string>
    <string name="movie_sinopse">Synopsis</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_name">Movie name</string>
    <string name="observa_es">Observations</string>
    <string name="ano">Year</string>
    <string name="cinema">Cinema</string>
    <string name="classificao">Classification</string>
    <string name="titulo_do_filme">Movie Title</string>
    <string name="movie_registry_cinema_name">Cinema name</string>
    <string name="movie_registry_rate">Rating</string>
    <string name="movie_registry_seen_date">Date</string>
    <string name="movie_registry_observations">Observations</string>
    <string name="movie_registry_photos_label">Photos</string>
    <string name="detalhes">Details</string>
    <string name="movie_registry_title">Your opinion about the movie</string>
    <string name="movie_voice_search">Voice Search</string>
    <string name="movie_voice_search_title">Search a movie</string>

    <string name="share_label">Share with</string>
    <string name="share_body_with_observations">Hi,\nI watched %1$s movie on %2$s at the cinema %3$s and gave it a rating of %4$s.\n\nHere\'s the link for more information about this movie -&gt; %5$s\n\nObservations: %6$s</string>
    <string name="share_body">Hi,\nI watched %1$s movie on %2$s at the cinema %3$s and gave it a rating of %4$s.\n\nHere\'s the link for more information about this movie -&gt; %5$s</string>



    <string name="no_internet_connection">Feature unavailable without internet connection</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="cinema_not_found">Cinema not found</string>
    <string name="registry_not_found">Movie registry not found</string>
    <string name="invalid_registry">Invalid movie registry</string>

    <string name="movies_tab_list">List</string>
    <string name="movies_tab_map">Map</string>

    <string name="dashboard_average_rate">Average Rate</string>
    <string name="dashboard_highest_score">Highest Score</string>
    <string name="dashboard_movies_seen">Movies Seen</string>
    <string name="dashboard_cinemas_visited">Cinemas Visited</string>

    <string name="search_movie">Search a movie</string>
    <string name="speak_now">Speak now...</string>
    <string name="start_voice_input">Speak</string>
    <string name="search_button">Search</string>
    <string name="search_text_empty">You need to click speak before trying to search.</string>
    <string name="click_count" translatable="false">Click Count:</string>
    <string name="number_of_clicks" translatable="false">Number of Clicks</string>
    <string name="sort_asc" translatable="false">Sort Asc</string>
    <string name="sort_desc" translatable="false">Sort Desc</string>
    <string name="movie_imdb_dvd" translatable="false">DVD: %s</string>
    <string name="i_want_to_see_again" translatable="false">I want to see again</string>
    <string name="i_would_like_to_see_this_movie_again" translatable="false">I would like to see this movie again</string>
    <string name="ischecked_s" translatable="false">isChecked: %s</string>
    <string name="movie_cinema_data" translatable="false" >Cinema data</string>
    <string name="address" translatable="false">%s</string>
    <string name="city" translatable="false">City: %s</string>
    <string name="postal_code" translatable="false">Postal Code: %s</string>
    <string name="code" translatable="false">Code: %s</string>
    <string name="code_label" translatable="false" >test</string>
    <string name="grau_de_satisfa_o" translatable="false">grau de satisfação</string>
    <string name="by_order_ascending" translatable="false">by order ascending</string>
    <string name="pcode" translatable="false">postal code: %s</string>
    <string name="foto" translatable="false" >imagem: %s</string>
</resources>
